--- a/Release/好品推助手.vshost.exe.config
+++ b/Release/好品推助手.vshost.exe.config
@@ -3,6 +3,8 @@
 <configSections>
 </configSections>
 <connectionStrings>
-    <add name="haopintui.Properties.Settings.阿里妈妈订单ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=E:\work\cs\好品推\Release\config\阿里妈妈订单.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
+    <add name="haopintui.Properties.Settings.订单ConnectionString"
+        connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=E:\haopintui\zhuzhou\Release\config\阿里妈妈订单.mdb;Persist Security Info=True"
+        providerName="System.Data.OleDb" />
 </connectionStrings>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
